package translate;

public interface UmlConfigBuilder {

    public ClassDiagramConfig build();

}
